--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
       <h3><img src="Banner1.jpg"</h3>
     </div>
     <nav>
-      <a href="index.html">Início</a>
+      <a href="Index.html">Início</a>
       <a href="Provas.html">Provas</a>
       <a href="aguarde.html">Testes</a>
       <a href="Notaveis.html">Notáveis</a>
