--- a/Documentos.html
+++ b/Documentos.html
@@ -32,9 +32,33 @@
     </nav>
   </section>
   <!-- Stats Gallery Section -->
-<p align="center"><iframe width="760px" height="500px" src="https://sway.office.com/s/i4AxPqhYFCE5mgYz/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
   <div class="gallery">
     <div class="thumbnail">
+      <h4>BNCC</h4>
+      <img src="Bncc_mini.jpg">
+      <p class="text_column"></p>
+      <p><a href="https://drive.google.com/drive/folders/1aprhp5L92kr_KdYfo81_AJWCkFBMfEvP">Acesse</a></p>
+    </div>
+    <div class="thumbnail">
+      <h4>BNCC Matemática</h4>
+      <img src="BNCCMAT_mini.jpg">
+      <p class="text_column"></p>
+    <p><a href="https://drive.google.com/drive/folders/1aprhp5L92kr_KdYfo81_AJWCkFBMfEvP">Acesse</a></p>
+   </div>
+    <div class="thumbnail">
+      <h4>Currículo Paulista</h4>
+      <img src="CurriculoP_mini.jpg">
+      <p class="text_column"> </p>
+    <p><a href="https://drive.google.com/drive/folders/1aprhp5L92kr_KdYfo81_AJWCkFBMfEvP">Acesse</a></p>
+  </div>
+    <div class="thumbnail">
+      <h4>Lei de Diretrizes e Bases</h4>
+      <img src="LDB_mini.jpg">
+      <p class="text_column"></p>
+  <p><a href="https://drive.google.com/drive/folders/1aprhp5L92kr_KdYfo81_AJWCkFBMfEvP">Acesse</a></p>
+  </div>
+  </div>
+  <div class="gallery">
   </div>
   <!-- Footer Section -->
   <footer>
