--- a/Provas.html
+++ b/Provas.html
@@ -19,55 +19,40 @@
     <div class="column">
       <h3><img src="Banner1.jpg"</h3>
     </div>
-    <nav>
-      <a href="index.html">Início</a>
-      <a href="Provas.html">Provas</a>
-      <a href="Testes.html">Testes</a>
-      <a href="Notaveis.html">Notáveis</a>
-      <a href="Aulas.html">Aulas</a>
-      <a href="Dicas.html">Dicas</a>
-      <a href="Vídeos.html">Vídeos</a>
-      <a href="Contato.html">Contato</a>
-      <a href="Documentos.html">Documentos</a>
+      <nav>
+        <a href="Index.html">Início</a>
+        <a href="Provas.html">Provas</a>
+        <a href="Testes.html">Testes</a>
+        <a href="Notaveis.html">Notáveis</a>
+        <a href="aguarde.html">Aulas</a>
+        <a href="Dicas.html">Dicas</a>
+        <a href="Materiais.html">Materiais</a>
+        <a href="Cursos.html">Cursos</a>
+        <a href="Documentos.html">Documentos</a>
     </nav>
   </section>
   <!-- Stats Gallery Section -->
   <div class="gallery">
-    <div class="thumbnail">
-      <h4>2ª Edição da AAP</h4>
-      <p class="text_column"></p>
-      <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-    </div>
-    <div class="thumbnail">
-      <h4>3ª Edição da AAP</h4>
-    <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-   </div>
-    <div class="thumbnail">
-      <h4>4ª Edição da AAP</h4>
-      <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-  </div>
-    <div class="thumbnail">
-      <h4>5ª Edição da AAP</h4>
-    <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-  </div>
-  </div>
-  <div class="gallery">
-    <div class="thumbnail">
-      <h4>6ª Edição da AAP</h4>
-    <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-  </div>
-    <div class="thumbnail">
-      <h4>7ª Edição da AAP</h4>
-    <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-  </div>
-    <div class="thumbnail">
-      <h4>8ª Edição da AAP</h4>
-    <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-  </div>
-    <div class="thumbnail">
-      <h4>9ª Edição da AAP</h4>
-    <p><a href="https://drive.google.com/drive/folders/1US_MhJZ3H4hlRltHK2rN_umhXeQDUyPn?usp=sharing">Acesse</a></p>
-  </div>
+<div class="thumbnail">
+  <h4>Todas Edições AAP</h4>
+  <img src="AAP_mini.jpg">
+<p><a href="https://drive.google.com/drive/folders/1bCTWNLAafZU7ZNeCabhGxVucNYhSU2Bi?usp=sharing">Acesse</a></p>
+</div>
+<div class="thumbnail">
+  <h4>Todas Edições ENEM</h4>
+  <img src="Enem_mini.jpg">
+<p><a href="https://drive.google.com/drive/folders/1qMwtfjX8fZ5la2XxtlHWiBeME5COmFFY?usp=sharing">Acesse</a></p>
+</div>
+<div class="thumbnail">
+  <h4>Todas Edições OBMEP</h4>
+  <img src="OBMEP_mini.jpg">
+<p><a href="https://drive.google.com/drive/u/2/folders/1iJYGcniUQ7SGI6IVvI49EsjsC31njwD5">Acesse</a></p>
+</div>
+<div class="thumbnail">
+  <h4>Prova Brasil</h4>
+  <img src="Provabrasil_mini.jpg">
+<p><a href="https://drive.google.com/drive/folders/1gLAxGPgFtubmuKGmXm0kXs84ooQRubAq?usp=sharing">Acesse</a></p>
+</div>
   </div>
   <!-- Footer Section -->
   <footer>
