--- a/Testes.html
+++ b/Testes.html
@@ -22,19 +22,31 @@
     <nav>
       <a href="Index.html">Início</a>
       <a href="Provas.html">Provas</a>
-      <a href="Testes.html">Testes</a>
+      <a href="aguarde.html">Testes</a>
       <a href="Notaveis.html">Notáveis</a>
       <a href="aguarde.html">Aulas</a>
       <a href="Dicas.html">Dicas</a>
       <a href="Materiais.html">Materiais</a>
-      <a href="Cursos.html">Cursos</a>
+      <a href="aguarde.html">Contato</a>
       <a href="Documentos.html">Documentos</a>
     </nav>
   </section>
   <!-- Stats Gallery Section -->
-<p align="center"><iframe width="760px" height="500px" src="https://sway.office.com/s/i4AxPqhYFCE5mgYz/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
   <div class="gallery">
     <div class="thumbnail">
+      <h4>AAP 2019 6º Ano</h4>
+      <img src="AAP_mini.jpg">
+      <p class="text_column"></p>
+      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScHNglsXZawMqvB02tTi7E-B7gexMCkN1uKxoHOMZwXP2OZaA/viewform">Acesse</a></p>
+    </div>
+    <div class="thumbnail">
+      <h4>Simulado Prova Brasil</h4>
+      <img src="ProvaBrasil_mini.jpg">
+      <p class="text_column"></p>
+    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSepB7xyGzqcXjSMkjHYN9Ss8oXQxdCWj3c96Jn8fv2GOsWSqA/viewform">Acesse</a></p>
+   </div>
+  </div>
+  <div class="gallery">
   </div>
   <!-- Footer Section -->
   <footer>
