--- a/Videos.html
+++ b/Videos.html
@@ -20,21 +20,39 @@
       <h3><img src="Banner1.jpg"</h3>
     </div>
     <nav>
-      <a href="Index.html">Início</a>
+      <a href="index.html">Início</a>
       <a href="Provas.html">Provas</a>
       <a href="Testes.html">Testes</a>
       <a href="Notaveis.html">Notáveis</a>
-      <a href="aguarde.html">Aulas</a>
+      <a href="Aulas.html">Aulas</a>
       <a href="Dicas.html">Dicas</a>
-      <a href="Materiais.html">Materiais</a>
-      <a href="Cursos.html">Cursos</a>
+      <a href="Vídeos.html">Vídeos</a>
+      <a href="Contato.html">Contato</a>
       <a href="Documentos.html">Documentos</a>
     </nav>
   </section>
   <!-- Stats Gallery Section -->
-<p align="center"><iframe width="760px" height="500px" src="https://sway.office.com/s/i4AxPqhYFCE5mgYz/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
   <div class="gallery">
-    <div class="thumbnail">
+<div class="thumbnail">
+  <h4>Todas Edições AAP</h4>
+  <img src="AAP_mini.jpg">
+<p><a href="https://drive.google.com/drive/folders/1bCTWNLAafZU7ZNeCabhGxVucNYhSU2Bi?usp=sharing">Acesse</a></p>
+</div>
+<div class="thumbnail">
+  <h4>Todas Edições ENEM</h4>
+  <img src="Enem_mini.jpg">
+<p><a href="https://drive.google.com/drive/folders/1qMwtfjX8fZ5la2XxtlHWiBeME5COmFFY?usp=sharing">Acesse</a></p>
+</div>
+<div class="thumbnail">
+  <h4>Todas Edições OBMEP</h4>
+  <img src="OBMEP_mini.jpg">
+<p><a href="https://drive.google.com/drive/u/2/folders/1iJYGcniUQ7SGI6IVvI49EsjsC31njwD5">Acesse</a></p>
+</div>
+<div class="thumbnail">
+  <h4>Em Breve vestibulares</h4>
+  <img src="Vestibular_mini.jpg">
+<p><a href="Provas.html">Acesse</a></p>
+</div>
   </div>
   <!-- Footer Section -->
   <footer>
