--- a/Aguarde.html
+++ b/Aguarde.html
@@ -20,15 +20,15 @@
       <h3><img src="Banner1.jpg"</h3>
     </div>
     <nav>
-      <a href="index.html">Início</a>
+      <a href="Index.html">Início</a>
       <a href="Provas.html">Provas</a>
-      <a href="index.html">Testes</a>
+      <a href="Testes.html">Testes</a>
       <a href="Notaveis.html">Notáveis</a>
-      <a href="index.html">Aulas</a>
-      <a href="index.html">Dicas</a>
-      <a href="index.html">Vídeos</a>
-      <a href="index.html">Contato</a>
-      <a href="index.html">Documentos</a>
+      <a href="aguarde.html">Aulas</a>
+      <a href="Dicas.html">Dicas</a>
+      <a href="Materiais.html">Materiais</a>
+      <a href="Cursos.html">Cursos</a>
+      <a href="Documentos.html">Documentos</a>
     </nav>
   </section>
   <!-- Stats Gallery Section -->
