--- a/Materiais.html
+++ b/Materiais.html
@@ -32,9 +32,22 @@
     </nav>
   </section>
   <!-- Stats Gallery Section -->
-<p align="center"><iframe width="760px" height="500px" src="https://sway.office.com/s/i4AxPqhYFCE5mgYz/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
   <div class="gallery">
     <div class="thumbnail">
+      <h4>Aprender Sempre</h4>
+      <img src="Aprender_mini.jpg">
+    <p><a href="https://drive.google.com/drive/folders/1fTfhAs_k_WKWmqBBkzkV6phtAZnQbjoc?usp=sharing">Acesse</a></p>
+    </div>
+    <div class="thumbnail">
+      <h4>São Paulo Faz Escola</h4>
+      <img src="spfaz_mini.jpg">
+    <p><a href="https://drive.google.com/drive/folders/1rSmeq2xtvxCVG5bfyHCA6c7vPowyLmBS?usp=sharing">Acesse</a></p>
+   </div>
+    <div class="thumbnail">
+      <h4>Caderno Aluno/Professor</h4>
+      <img src="Caderno_mini.jpg">
+      <p><a href="https://drive.google.com/drive/folders/1bIAr9zhR49yaYdGRK9rWYU2LtxTGlgtk?usp=sharing">Acesse</a></p>
+  </div>
   </div>
   <!-- Footer Section -->
   <footer>
